--- a/src/app/components/productos/producto-list/productos.component.html
+++ b/src/app/components/productos/producto-list/productos.component.html
@@ -17,7 +17,7 @@
             <div class="card" >
                 <div class="card-header">
                     <div >
-                        <img src="https://res.cloudinary.com/dnblt4j16/image/upload/v1622820116/gorichelas/126794_bfxby4.png" 
+                        <img *ngIf="user" src="https://res.cloudinary.com/dnblt4j16/image/upload/v1622820116/gorichelas/126794_bfxby4.png" 
                             width="30" style="float: right; cursor: pointer;" (click)="selectedCard(producto._id)">
                     </div>   
                     <strong>{{producto.nombre}}</strong>
