--- a/src/app/components/ordenes/ordenes-list-barra/ordenes-list-barra.component.html
+++ b/src/app/components/ordenes/ordenes-list-barra/ordenes-list-barra.component.html
@@ -16,6 +16,7 @@
        
                   </div>
                   <div class="card-footer bg-transparent border-success">Estatus: <span style="color: orange;">{{ orden.estatus}}</span></div>
+                  <button  (click)="liberarDeBarra(orden)" class="btn btn-primary">Liberar Órden</button>
             </div>
         </div>
     </div>    
