--- a/src/app/components/ordenes/ordenes-list-cocina/ordenes-list-cocina.component.html
+++ b/src/app/components/ordenes/ordenes-list-cocina/ordenes-list-cocina.component.html
@@ -16,6 +16,7 @@
        
                   </div>
                   <div class="card-footer bg-transparent border-success">Estatus: <span style="color: orange;">{{ orden.estatus}}</span></div>
+                  <button (click)="liberarDeCocina(orden)" class="btn btn-warning">Liberar </button>
             </div>
         </div>
     </div>    
