--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
 
-          <li class="nav-item" routerLinkActive="active">
+          <li *ngIf="!user || user && rolUsuario=='MESERO' || user && rolUsuario=='ADMINISTRADOR'" class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['/carta/mesa', this.ordenService.orden.noMesa]">Carta</a>
           </li>
 
@@ -30,10 +30,6 @@
               </span>
             </a> 
           </li> 
-        <!--
-          <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="/orden">Orden</a>
-          </li> -->
 
           <li *ngIf="user && rolUsuario=='ADMINISTRADOR'" class="nav-item" routerLinkActive="active">
             <a class="nav-link" routerLink="/ordenes">Ordenes</a>
@@ -55,12 +51,26 @@
             <a class="nav-link" routerLink="/ordenes-caja">Caja</a>
           </li>
 
-          <li *ngIf="user && rolUsuario=='ADMINISTRADOR'" class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="/usuarios">Usuarios</a>
+          <li *ngIf="user && rolUsuario=='ADMINISTRADOR'" class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Usuarios
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" routerLink="/usuarios">Ver Usuarios</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" routerLink="/usuario-form">Agregar Usuario</a>
+            </div>
           </li>
 
-          <li *ngIf="user && rolUsuario=='ADMINISTRADOR'" class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="/productos">Productos</a>
+          <li *ngIf="user && rolUsuario=='ADMINISTRADOR'" class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Productos
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" routerLink="/productos">Ver Productos</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" routerLink="/producto-form">Agregar Producto</a>
+            </div>
           </li>
 
       </ul>
