--- a/src/app/components/ordenes/orden/orden.component.html
+++ b/src/app/components/ordenes/orden/orden.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top: 80px;">
 
-    <div class="alert" style="background-color: #6ddddd;">
-        <div class="row mb-4">
+    <div class="alert" style="background-color: #fcd04d;">
+        <div class="row mb-3">
             <div class="col-md-3">
                 <span><strong>Número de Órden: </strong>{{orden.noOrden}}</span>
             </div>
@@ -12,23 +12,24 @@
                 <span><strong>Cliente: </strong>{{orden.nombreCliente}}</span>
             </div>
             <div class="col-md-3">
-                <span><strong>Total a Pagar: </strong>{{orden.totalOrden | currency}} MXN</span>
+                <span>Total a Pagar: <strong>{{orden.totalOrden | currency}} MXN </strong></span>
             </div>
         </div>
     </div>
 
     <div class="card mt-2">
-    <table class="rounded">
+    <table class="rounded" style="font-size: small;">
         <thead>
             <tr>
             <!-- <th scope="col">ID Producto:</th> -->
-            <td scope="col">Nombre: </td>
-            <td scope="col">Cantidad: </td>
-            <td scope="col">Precio: </td>
-            <td scope="col">Total: </td>
-            <td scope="col">Opción: </td>
+            <td scope="col">Producto </td>
+            <td scope="col" style="width: 65px;">Cantidad</td>
+            <td scope="col">Precio</td>
+            <td scope="col">Total</td>
+            <td scope="col">Opción</td>
             </tr>
         </thead>
+        <div style="height: 20px;"></div>
         <tbody >
             <tr *ngFor="let detalle of orden.detalleOrden; let posicion = index">
             <!-- <td>{{detalle.idProducto}}</td> -->
@@ -37,14 +38,19 @@
             <td> <input (input)="calcularCantidad(posicion)" [(ngModel)]="detalle.cantidad" class="form-control" type="number" > </td>
             <td>{{detalle.precio | currency}}</td>
             <td><strong>{{detalle.total | currency}}</strong></td>
-            <td> <button class="btn btn-danger" (click)="eliminar(posicion)">X</button></td>
+            <td> <button class="btn btn-danger btn-sm" (click)="eliminar(posicion)" style="margin-left: 15px;">x</button></td>
             </tr>
         </tbody>
     </table>
     </div>
 
-    <div class="text-center">
-        <button (click)="guardarOrden()" class="btn btn-primary ">Ordenar</button>
+    <div style="margin-top: 15px;">
+        <small>Coloca el <strong> Número de Mesa: </strong> </small>
+        <input [(ngModel)]="orden.noMesa" class="form-control" type="number">
+    </div>
+
+    <div class="text-center" style="margin-top: 10px;">
+        <button (click)="guardarOrden()" class="btn btn-warning">Ordenar</button>
     </div>
 
 </div>
