--- a/src/app/components/carta/carta.component.html
+++ b/src/app/components/carta/carta.component.html
@@ -1,5 +1,5 @@
 
-<div class="fixed-top" style="color: white; position: fixed; width: 100%; background-color: #ffc107; z-index: 1; height: 40pt; margin-top: 55px;">
+<div class="fixed-top" style="color: white; position: fixed; width: 100%; background-color: #f6f5f5; z-index: 1; height: 40pt; margin-top: 60px;">
     <div class="container">
       <div class="row p-2">
         <div class="col-9">
@@ -21,6 +21,86 @@
 </div>
 
 <div class="container" style="margin-top: 120px;">
+
+
+    <div class="row">
+        <div class="col col-6">
+            <a routerLink="/tortas">
+            <div class="my_img img_tortas" >
+                <div style="height: 50%;"></div>
+                <div class=" degradado"> 
+                    <div class="my_texto"><h5>TORTAS</h5></div>
+                </div>
+            </div>
+            </a>  
+        </div>
+
+        <div class="col col-6">  
+            <a routerLink="/tacos">
+            <div class="my_img img_tacos" >
+                <div style="height: 50%;"></div>
+                <div class=" degradado"> 
+                    <div class="my_texto"><h5>TACOS</h5></div>
+                </div>
+            </div>
+            </a>
+        </div>
+    </div>
+
+    <div style="height: 15px;"></div>
+
+    <div class="row">
+        <div class="col col-6">  
+            <a routerLink="/snacks">
+            <div class="my_img img_snacks" >
+                <div style="height: 50%;"></div>
+                <div class=" degradado"> 
+                    <div class="my_texto"><h5>SNACKS</h5></div>
+                </div>
+            </div>
+            </a>
+        </div>
+
+        <div class="col col-6">  
+            <a routerLink="/jugos">
+            <div class="my_img img_jugos" >
+                <div style="height: 50%;"></div>
+                <div class=" degradado"> 
+                    <div class="my_texto"><h5>JUGOS</h5></div>
+                </div>
+            </div>
+            </a>
+        </div>
+    </div>
+
+    <div style="height: 15px;"></div>
+
+    <div class="row">
+        <div class="col col-6">  
+            <a routerLink="/bebidas">
+            <div class="my_img img_bebidas" >
+                <div style="height: 50%;"></div>
+                <div class=" degradado"> 
+                    <div class="my_texto"><h5 style="margin: 0px;">BEBIDAS</h5> <label>Alcohólicas</label> </div>
+                </div>
+            </div>
+            </a>
+        </div>
+
+        <div class="col col-6"> 
+            <a routerLink="/refrescos">
+            <div class="my_img img_refrescos" >
+                <div style="height: 50%;"></div>
+                <div class="degradado"> 
+                    <div class="my_texto"><h5>REFRESCOS</h5></div> 
+                </div>
+            </div>
+            </a> 
+        </div>
+    </div>
+
+    <div style="height: 15px;"></div>
+
 
     <div *ngIf="mostrarProductosFiltrados">
         <div class="alert" style="background-color: #ffc107;"><strong>Resultados...</strong></div>
