--- a/src/app/components/ordenes/ordenes-list-mesero/ordenes-list-mesero.component.html
+++ b/src/app/components/ordenes/ordenes-list-mesero/ordenes-list-mesero.component.html
@@ -21,12 +21,15 @@
                       </div>
                       <div *ngIf="orden.estatus === 'PREPARADO' ">
                         <small> Estatus: </small><span style="color: #28a745;"><strong> {{ orden.estatus}} </strong></span>
-                      </div> 
+                      </div>
+                      <div *ngIf="orden.estatus === 'SERVIDA' ">
+                        <small> Estatus: </small><span style="color: #6d6d6d;"> {{ orden.estatus}} </span>
+                      </div>  
                   </div>
                   <!-- 
                     <span style="color: green;" *ngIf="orden.en_cocina === 'PREPARADO'"> Cocina: Listo</span> 
                     <span style="color: green;" *ngIf="orden.en_barra === 'PREPARADO'"> Barra: Listo</span> -->
-                    <button *ngIf="orden.estatus === 'PREPARADO' " class="btn btn-danger"> <small> Marcar como </small>SERVIDA</button>
+                    <button *ngIf="orden.estatus === 'PREPARADO'" class="btn btn-danger" (click)="marcarServida(orden)"> <small> Marcar como </small>SERVIDA</button>
                   
             </div>
         </div>
